Fix overflow hiding

--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body {
   background-color: #0b0b0e;
   color: white;
   font-family: 'Poppins', sans-serif;
-  height: 100vh;
-  overflow: hidden;
+  margin: 0px;
 }
 
 main {
